Added a second assitant with no tools

--- a/notebooks/assistant-02-framework.ipynb
+++ b/notebooks/assistant-02-framework.ipynb
@@ -38,49 +38,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Creating new thread for Victor with wa_id 789\n",
+      "Generated message: The 1001st prime number is 7927.\n",
+      "To Victor: The 1001st prime number is 7927.\n",
       "Retrieving existing thread for John with wa_id 123\n",
-      "Generated message: 2 + 2 equals 4.\n",
-      "To John: 2 + 2 equals 4.\n",
+      "Generated message: The result of \\(2 + 2\\) is \\(4\\).\n",
+      "To John: The result of \\(2 + 2\\) is \\(4\\).\n",
       "Retrieving existing thread for Sarah with wa_id 456\n",
-      "Generated message: The expression \\( x \\times x \\) is mathematically equal to \\( x^2 \\), which is the square of \\( x \\).\n",
-      "To Sarah: The expression \\( x \\times x \\) is mathematically equal to \\( x^2 \\), which is the square of \\( x \\).\n",
+      "Generated message: The expression \\( x \\times x \\) is equal to \\( x^2 \\) (x squared), which represents the square of the variable x.\n",
+      "To Sarah: The expression \\( x \\times x \\) is equal to \\( x^2 \\) (x squared), which represents the square of the variable x.\n",
       "Retrieving existing thread for John with wa_id 123\n",
-      "Generated message: Given \\( y = 2 \\) and \\( m = -10 \\), we can substitute these values into the equation \\( x = m \\cdot y + 5 \\):\n",
+      "Generated message: Given \\( y = 2 \\) and \\( m = -10 \\), the equation \\( x = m \\cdot y + 5 \\) becomes:\n",
       "\n",
       "\\[ x = (-10) \\cdot 2 + 5 \\]\n",
       "\\[ x = -20 + 5 \\]\n",
       "\\[ x = -15 \\]\n",
       "\n",
-      "The value of \\( x \\) is \\( -15 \\).\n",
-      "To John: Given \\( y = 2 \\) and \\( m = -10 \\), we can substitute these values into the equation \\( x = m \\cdot y + 5 \\):\n",
+      "So, the value of \\( x \\) is \\( -15 \\).\n",
+      "To John: Given \\( y = 2 \\) and \\( m = -10 \\), the equation \\( x = m \\cdot y + 5 \\) becomes:\n",
       "\n",
       "\\[ x = (-10) \\cdot 2 + 5 \\]\n",
       "\\[ x = -20 + 5 \\]\n",
       "\\[ x = -15 \\]\n",
       "\n",
-      "The value of \\( x \\) is \\( -15 \\).\n",
+      "So, the value of \\( x \\) is \\( -15 \\).\n",
       "Retrieving existing thread for Sarah with wa_id 456\n",
-      "Generated message: If \\( x = 2 \\), then the value of \\( y \\) for \\( y = x \\times x \\) would be:\n",
+      "Generated message: If \\( x = 2 \\), then the value of \\( y \\), for \\( y = x \\times x \\), is:\n",
       "\n",
       "\\( y = 2 \\times 2 = 4 \\)\n",
       "\n",
-      "So, if \\( x = 2 \\), then \\( y = 4 \\).\n",
-      "To Sarah: If \\( x = 2 \\), then the value of \\( y \\) for \\( y = x \\times x \\) would be:\n",
+      "So, the value of \\( y \\) is 4.\n",
+      "To Sarah: If \\( x = 2 \\), then the value of \\( y \\), for \\( y = x \\times x \\), is:\n",
       "\n",
       "\\( y = 2 \\times 2 = 4 \\)\n",
       "\n",
-      "So, if \\( x = 2 \\), then \\( y = 4 \\).\n"
+      "So, the value of \\( y \\) is 4.\n"
      ]
     }
    ],
    "source": [
+    "\n",
+    "\n",
     "new_message = framework.generate_response(client,assistant,\"What's 2+2\", \"123\", \"John\")\n",
     "\n",
     "new_message = framework.generate_response(client,assistant,\"What's x*x?\", \"456\", \"Sarah\")\n",
@@ -88,6 +93,156 @@
     "new_message = framework.generate_response(client,assistant,\"What the value of x, for x=m*y+5, if y=2 and m=-10?\", \"123\", \"John\")\n",
     "\n",
     "new_message = framework.generate_response(client,assistant,\"What is the value of y, for y=x*x?, if x=2?\", \"456\", \"Sarah\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assistant1 = framework.create_assistant(client,\"Golang\",\"You are an assistant that can help write and explain Go code.\", None, common.gpt_deployment_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Retrieving existing thread for Victor with wa_id 789\n",
+      "Generated message: Here's a Go application to find the 1001st prime number:\n",
+      "\n",
+      "```go\n",
+      "package main\n",
+      "\n",
+      "import (\n",
+      "\t\"fmt\"\n",
+      ")\n",
+      "\n",
+      "// isPrime checks if the number is a prime number.\n",
+      "func isPrime(number int) bool {\n",
+      "\tif number <= 1 {\n",
+      "\t\treturn false // 0 and 1 are not prime numbers\n",
+      "\t}\n",
+      "\tif number <= 3 {\n",
+      "\t\treturn true // 2 and 3 are prime numbers\n",
+      "\t}\n",
+      "\tif number%2 == 0 || number%3 == 0 {\n",
+      "\t\treturn false // exclude multiples of 2 and 3\n",
+      "\t}\n",
+      "\n",
+      "\tfor i := 5; i*i <= number; i += 6 {\n",
+      "\t\tif number%i == 0 || number%(i+2) == 0 {\n",
+      "\t\t\treturn false // exclude multiples of i\n",
+      "\t\t}\n",
+      "\t}\n",
+      "\n",
+      "\treturn true\n",
+      "}\n",
+      "\n",
+      "// findNthPrime finds the nth prime number using a brute force method.\n",
+      "func findNthPrime(nth int) int {\n",
+      "\tcount := 0\n",
+      "\tnumber := 1\n",
+      "\n",
+      "\tfor count < nth {\n",
+      "\t\tnumber++\n",
+      "\t\tif isPrime(number) {\n",
+      "\t\t\tcount++\n",
+      "\t\t}\n",
+      "\t}\n",
+      "\n",
+      "\treturn number\n",
+      "}\n",
+      "\n",
+      "func main() {\n",
+      "\tnth := 1001\n",
+      "\tnthPrime := findNthPrime(nth)\n",
+      "\tfmt.Printf(\"The %dth prime number is: %d\\n\", nth, nthPrime)\n",
+      "}\n",
+      "\n",
+      "```\n",
+      "\n",
+      "To run this Go program, follow these steps:\n",
+      "\n",
+      "1. Save the code to a file named `prime.go`, for example.\n",
+      "2. Open a terminal.\n",
+      "3. Navigate to the directory where you saved the `prime.go` file.\n",
+      "4. Compile the Go program by running the command `go build prime.go`.\n",
+      "5. Run the compiled executable by entering `./prime`.\n",
+      "\n",
+      "This will execute your Go application, and you will see the 1001st prime number printed to the terminal. Remember, Go code needs to be compiled before running, which is done with the `go build` command. If you just want to run the code without creating an executable, you can use `go run prime.go`.\n",
+      "To Victor: Here's a Go application to find the 1001st prime number:\n",
+      "\n",
+      "```go\n",
+      "package main\n",
+      "\n",
+      "import (\n",
+      "\t\"fmt\"\n",
+      ")\n",
+      "\n",
+      "// isPrime checks if the number is a prime number.\n",
+      "func isPrime(number int) bool {\n",
+      "\tif number <= 1 {\n",
+      "\t\treturn false // 0 and 1 are not prime numbers\n",
+      "\t}\n",
+      "\tif number <= 3 {\n",
+      "\t\treturn true // 2 and 3 are prime numbers\n",
+      "\t}\n",
+      "\tif number%2 == 0 || number%3 == 0 {\n",
+      "\t\treturn false // exclude multiples of 2 and 3\n",
+      "\t}\n",
+      "\n",
+      "\tfor i := 5; i*i <= number; i += 6 {\n",
+      "\t\tif number%i == 0 || number%(i+2) == 0 {\n",
+      "\t\t\treturn false // exclude multiples of i\n",
+      "\t\t}\n",
+      "\t}\n",
+      "\n",
+      "\treturn true\n",
+      "}\n",
+      "\n",
+      "// findNthPrime finds the nth prime number using a brute force method.\n",
+      "func findNthPrime(nth int) int {\n",
+      "\tcount := 0\n",
+      "\tnumber := 1\n",
+      "\n",
+      "\tfor count < nth {\n",
+      "\t\tnumber++\n",
+      "\t\tif isPrime(number) {\n",
+      "\t\t\tcount++\n",
+      "\t\t}\n",
+      "\t}\n",
+      "\n",
+      "\treturn number\n",
+      "}\n",
+      "\n",
+      "func main() {\n",
+      "\tnth := 1001\n",
+      "\tnthPrime := findNthPrime(nth)\n",
+      "\tfmt.Printf(\"The %dth prime number is: %d\\n\", nth, nthPrime)\n",
+      "}\n",
+      "\n",
+      "```\n",
+      "\n",
+      "To run this Go program, follow these steps:\n",
+      "\n",
+      "1. Save the code to a file named `prime.go`, for example.\n",
+      "2. Open a terminal.\n",
+      "3. Navigate to the directory where you saved the `prime.go` file.\n",
+      "4. Compile the Go program by running the command `go build prime.go`.\n",
+      "5. Run the compiled executable by entering `./prime`.\n",
+      "\n",
+      "This will execute your Go application, and you will see the 1001st prime number printed to the terminal. Remember, Go code needs to be compiled before running, which is done with the `go build` command. If you just want to run the code without creating an executable, you can use `go run prime.go`.\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_message = framework.generate_response(client,assistant1,\"Write a Go application to find the 1001st prime number.\", \"789\", \"Victor\")"
    ]
   }
  ],
